# projeto_lp3

./: pyproject.toml
projeto_lp3/: app.py  cpf.py
static/: style.css
templates/: base.html  base2.html  cadastro_produtos.html  cnpj.html  comoUtilizar.html  contato.html  cpf.html  home.html  politicaDePrivacidade.html  produtos.html  termosDeUso.html
