[tool.poetry]
name = "projeto-lp3"
version = "0.1.0"
description = ""
authors = ["felipe witkowsky <felipewitkowsky1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
validate-docbr = "^1.10.0"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
